tenants/proposal-rh-ai/chatbot-ui/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: chatbot-ui
  namespace: proposal-rh-ai
spec:
  ports:
    - name: http
      protocol: TCP
      port: 7861
      targetPort: 7861
  type: ClusterIP
  selector:
    app: chatbot-ui
