tenants/proposal-rh-ai/chatbot-ui/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chatbot-ui
  namespace: proposal-rh-ai
spec:
  to:
    kind: Service
    name: chatbot-ui
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
